<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context="heder_ithamar.apmaco.MainActivity">


    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingBottom="@dimen/padding_between"
        android:paddingTop="@dimen/padding_between"
        android:text="@string/info_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/crear_boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_text"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/button_padding"
        android:paddingTop="@dimen/button_padding"
        android:text="@string/crear_boton"
        android:textColor="@android:color/white" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/crear_boton"
        android:layout_marginBottom="@dimen/padding_between"
        android:layout_marginTop="@dimen/padding_between"
        android:background="#C8C9CB" />

    <EditText
        android:id="@+id/nombre_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/normal_padding"

        android:ems="10"
        android:hint="@string/nombre_input"
        android:inputType="textPersonName"
        android:padding="@dimen/edit_text_padding"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/contrasena_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nombre_input"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/padding_between"
        android:layout_marginTop="@dimen/normal_padding"

        android:ems="10"
        android:hint="@string/contrasena_input"
        android:inputType="textPassword"
        android:padding="@dimen/edit_text_padding"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:id="@+id/recordar_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/contrasena_input"
        android:layout_alignStart="@+id/contrasena_input"
        android:layout_below="@+id/contrasena_input"
        android:checked="false"
        android:text="@string/recordar_check" />

    <TextView
        android:id="@+id/olvidar_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_between"
        android:text="@string/olvidar_text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/contrasena_input"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/entrar_boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/button_padding"
        android:paddingTop="@dimen/button_padding"
        android:text="@string/entrar_boton"
        android:textColor="@android:color/white"
        android:layout_below="@+id/olvidar_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Clave"
        android:id="@+id/key"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contextClickable="true" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/entrar_boton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp" />
</RelativeLayout>
