<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/md_grey_50">

    <TextView
        android:id="@+id/name_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/background_header_seccion_inicio"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/titulo_comidas_populares"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/color_light" />


    <!-- Card Perfil -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin3">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_white_1000">
            <!--Etiqueta Perfil -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <!--Texto de ejemplo-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView4"
                    android:src="@mipmap/ic_launcher"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_descripcion"
                    android:paddingLeft="10dp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/reciclador"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />
</LinearLayout>